# OemPorts10T-PIF

./: Cargo.toml  README.md  info.txt  keybox.xml  pif-updater.md  pif.json  sepolicy_cil.txt
ROM/: Guide.smali  build.prop  classes.dex  pif_main.xml
ROM/system/etc/init/: oemports10t_pif.rc
framework_patcher/PIF/: classes.dex
