[package]
name = "pif-updater"
version = "0.1.0"
edition = "2024"

[dependencies]
ureq = { version = "2.9", features = ["tls", "native-certs"] }

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "pif-updater"
path = "src/bin/pif-updater.rs"
